Внесено зміни у файл index.html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 	
     <div id="content">
 	<p>Text...</p>
+        <p>Text...</p>
+        <p>Text...</p>
+        <p>Text...</p>
     <div>
 
     <script src="./main.js"></script>
